--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "pet-react",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +12,9 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "framer-motion": "^6.2.9",
+    "@iconscout/react-unicons": "^1.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
