--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{ 
+  "homepage": "https://klimenteen.github.io/testovoe_Elon/",
   "name": "pet-react",
   "version": "0.1.0",
   "private": true,
